assets/style.css
#main-header img {
  width: 100%;
  height: 100%;
}
#main-header .port-item {
  width: 30%;
}
#main-header .port-item:hover {
  opacity: 0.8;
  cursor: pointer;
}

.bg-black {
  color: white;
  background: black;
}

h2, h3, h4{
  font-family: monospace;
}
.display-4 {
  font-family: monospace;
  font-size: 55px;
}
span {
  font-family:'Codystar', cursive;
  font-size: large;
  font-weight: bold;
  
}

@media (min-width: 1199px) {
  .port-item {
    padding: 3em !important;
  }

.btn-primary:hover {
  background: #33a6cc;
}

.fas {
  padding-right: 10px;
}
.far {
  padding-right: 10px;
}
a {
  color: white;
}}

